# Polynomials

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  POLISH.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Win32/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
app/: app.vcxproj  app.vcxproj.filters  cmake_install.cmake  main.cpp
app/app.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  app_manifest.rc  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
cpp/: Polynomials.cpp
include/: List.h  Polynomials.h  Tables.h
sln/: Polynomials.sln
sln/Polynomials/: Polynomials.vcxproj  Polynomials.vcxproj.filters  ReadMe.txt
sln/gtest/: gtest.vcxproj  gtest.vcxproj.filters
sln/main/: main.vcxproj  main.vcxproj.filters
sln/test/: test.vcxproj  test.vcxproj.filters
src/: CMakeLists.txt  Polynomials.cpp  Tables.cpp  cmake_install.cmake  code.vcxproj  code.vcxproj.filters
src/Debug/: code.lib
src/code.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  code.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
test/: cmake_install.cmake  mytest.vcxproj  mytest.vcxproj.filters  test_list.cpp  test_main.cpp  test_polynomials.cpp
